# Orders

./: .env_sample  README.md  pyproject.toml
config/: settings.py  urls.py
orders/: admin.py  forms.py  models.py  serializers.py  urls.py  urls_api.py  views.py  views_api.py
orders/migrations/: 0001_initial.py  0002_alter_order_status.py
orders/templates/: base.html
orders/templates/orders/: order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  orders_list.html
orders/templates/orders/includes/: inc_menu.html
orders/tests/: tests_views.py
